<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".DeleteActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/bannermini" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etarticulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etdelete"
            android:backgroundTint="@color/black"
            android:digits="0123456789"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btrespuesta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/gray_medium"
                android:onClick="btget"
                android:text="@string/btpeticion"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btdelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/gray_medium"
                android:onClick="btdelete"
                android:text="@string/btdelete"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/tvid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Id:"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/tvnombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre:"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/tvprecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Precio:"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/tvarticulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Articulo:"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvmsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msgerror"
        android:textColor="@color/salmon_dark"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp" />

</LinearLayout>